<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fl_Wrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cyborg="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    >

    <LinearLayout
        android:id="@+id/LL_UpperBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/black_20"
        android:orientation="horizontal"
        >

        <!--<Spinner-->
        <!--android:id="@+id/iv_LogLevel"-->
        <!--style="@style/LogcatButtonStyle"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:contentDescription="@string/Logcat_ImgLogLevel"-->
        <!--android:src="@drawaic__log_levelevel"-->
        <!--/>-->
        <ImageView
            android:id="@+id/iv_FilterLogLevel"
            style="@style/LogcatButtonStyle"
            android:contentDescription="@string/Logcat_FilterLogLevel"
            android:src="@drawable/ic__filter__log_level"
            />

        <ImageView
            android:id="@+id/iv_FilterThread"
            style="@style/LogcatButtonStyle"
            android:contentDescription="@string/Logcat_FilterThread"
            android:src="@drawable/ic__filter__thread"
            />

        <ImageView
            android:id="@+id/iv_FilterTag"
            style="@style/LogcatButtonStyle"
            android:contentDescription="@string/Logcat_FilterTag"
            android:src="@drawable/ic__filter__tag"
            />

        <ImageView
            android:id="@+id/iv_SelectSource"
            style="@style/LogcatButtonStyle"
            android:contentDescription="@string/Logcat_SelectLogSource"
            android:src="@drawable/ic__filter__source"
            />

        <ImageView
            android:id="@+id/iv_Share"
            style="@style/LogcatButtonStyle"
            android:contentDescription="@string/Text_Share"
            android:src="@android:drawable/ic_menu_share"
            android:visibility="visible"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LL_RightBar"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/LL_UpperBar"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black_10"
            android:baselineAligned="false"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/iv_ScrollToTop"
                style="@style/LogcatButtonStyle"
                android:contentDescription="@string/Logcat_ScrollToTop"
                android:src="@drawable/ic__scroll_to_top"
                />

            <ImageView
                android:id="@+id/iv_ScrollToBottom"
                style="@style/LogcatButtonStyle"
                android:contentDescription="@string/Logcat_ScrollToBottom"
                android:src="@drawable/ic__scroll_to_bottom"
                />

            <ImageView
                android:id="@+id/iv_IncreaseFontSize"
                style="@style/LogcatButtonStyle"
                android:contentDescription="@string/Logcat_IncreaseFontSize"
                android:src="@drawable/ic__zoom_in"
                />

            <ImageView
                android:id="@+id/iv_DecreaseFontSize"
                style="@style/LogcatButtonStyle"
                android:contentDescription="@string/Logcat_DecreaseFontSize"
                android:src="@drawable/ic__zoom_out"
                />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>



